--- a/src/index.css
+++ b/src/index.css
@@ -14,15 +14,15 @@ html {
 
 :root {
   /* colors */
-  --primary-100: #d1fae5;
-  --primary-200: #a7f3d0;
-  --primary-300: #6ee7b7;
-  --primary-400: #34d399;
-  --primary-500: #10b981;
-  --primary-600: #059669;
-  --primary-700: #047857;
-  --primary-800: #065f46;
-  --primary-900: #064e3b;
+  --primary-100: #e3f0d6;
+  --primary-200: #c7e0ad;
+  --primary-300: #aad184;
+  --primary-400: #8ec15b;
+  --primary-500: #72b232;
+  --primary-600: #5b8e28;
+  --primary-700: #446b1e;
+  --primary-800: #2e4714;
+  --primary-900: #17240a;
 
   /* grey */
   --grey-50: #f8fafc;
